; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_sriov.c_ecore_iov_validate_active_rxq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_sriov.c_ecore_iov_validate_active_rxq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_vf_info = type { i64 }

@ECORE_IOV_VALIDATE_Q_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ecore_vf_info*)* @ecore_iov_validate_active_rxq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecore_iov_validate_active_rxq(%struct.ecore_vf_info* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ecore_vf_info*, align 8
  %4 = alloca i64, align 8
  store %struct.ecore_vf_info* %0, %struct.ecore_vf_info** %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i64, i64* %4, align 8
  %7 = load %struct.ecore_vf_info*, %struct.ecore_vf_info** %3, align 8
  %8 = getelementptr inbounds %struct.ecore_vf_info, %struct.ecore_vf_info* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp slt i64 %6, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %5
  %12 = load %struct.ecore_vf_info*, %struct.ecore_vf_info** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i32, i32* @ECORE_IOV_VALIDATE_Q_ENABLE, align 4
  %15 = call i64 @ecore_iov_validate_queue_mode(%struct.ecore_vf_info* %12, i64 %13, i32 %14, i32 0)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %23

18:                                               ; preds = %11
  br label %19

19:                                               ; preds = %18
  %20 = load i64, i64* %4, align 8
  %21 = add nsw i64 %20, 1
  store i64 %21, i64* %4, align 8
  br label %5

22:                                               ; preds = %5
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %17
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i64 @ecore_iov_validate_queue_mode(%struct.ecore_vf_info*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
